Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-80893

QtWebEngine crashes when receiving a QEvent::TouchCancel

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 5.14.1
    • 5.13.0, 5.13.1, 5.13.2, 5.14.0
    • WebEngine
    • None
    • 96d03be3e06649f9c9ed277622709e7a732bbcf9

    Description

      The crash is easily reproducible programmatically by calling QWindowSystemInterface::handleTouchCancelEvent(); on a QtQuick window with a WebView and with an active touch.

      The crash was introduced by QTBUG-59999, specifically with change https://codereview.qt-project.org/#/q/Ia492e58b83d3ad38cdf6877d468724c399f34367,n,z in RenderWidgetHostViewQt::handleTouchEvent():

      TouchCancel events have an empty touchPoints() list, which trips when accessing touchPoints[0]. More generally, that code is missing handling for the TouchCancel case altogether. It should be forwarded to m_touchSelectionController->WillHandleTouchEvent(motionEvent) as well, and respecting Chromium's expectation of the cancel event containing the last event's touchpoints, just like it's done a few lines below.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qt_webengine_team Qt WebEngine Team
            kromain Romain Pokrzywka
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes