Fix crash when handling QEvent::TouchCancel

TouchCancel events have an empty touchPoints() list, which first trips
when accessing touchPoints[0], and later on crashes Chromium if we pass
the empty list to m_touchSelectionController.
Rework handleTouchEvent() to route TouchCancel events like other touch
events, and make sure we pass a non-empty touchpoints list to Chromium.

Task-number: QTBUG-80893
Change-Id: Ie8396a1191f72b5bbb2b047f131794b37cfded48
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>